booklore-ui/src/app/features/metadata/component/book-metadata-center/metadata-editor/metadata-editor.component.scss
::ng-deep .p-tabpanels .custom-tab-padding {
  padding: 1rem 0rem 0rem 0.5rem !important;

  @media (min-width: 640px) {
    padding: var(--p-tabs-tabpanel-padding) !important;
  }
}

::ng-deep p-image {
  width: 250px;
}

::ng-deep p-image img {
  margin: 0 auto;
}

::ng-deep .p-autocomplete .p-chip .p-chip-label {
  font-size: 12px;
}

::ng-deep .p-autocomplete-input-chip {
  width: 7rem;
}

::ng-deep .withbutton input,
::ng-deep .withbutton ul {
  border-radius: 6px 0 0 6px;
}

.withbutton textarea {
  border-radius: 6px 0 6px 6px;
}

::ng-deep .withbutton button {
  border-color: var(--p-inputtext-border-color) !important;
  border-radius: 0 6px 6px 0 !important;
  border-left: 0px !important;
}

label {
  color: var(--text-color-secondary);
  white-space: nowrap;
}

